# bambu-backend

./: .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  README.md  components.json  docker-compose.yaml  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yaml
backend/: api.py  asyncCameraClient.py  main.py  printer_socket.py  printer_ws.py  printers.py  type_printer_status.py
bambu/: api.py  asyncCameraClient.py  main.py  printer_ftp.py  printer_payload.py  printer_ws.py  requirements.txt  types_printer.py  types_ws.py
bambu/models/: db.py  printers.py
bambu/printers/: async_camera_client.py  printer_ftp.py  printer_ws.py  printers.py  type_printer_status.py  types_printer.py  types_ws.py
frontend/: App.svelte  main.ts  typesApi.ts  typesPrinter.ts
frontend/lib/: Dashboard.svelte  GitHubButton.svelte  ModeToggleButton.svelte  Navbar.svelte  Printer.svelte  PrinterSelection.svelte  printerModel.ts  utils.ts
frontend/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte  alert-dialog-description.svelte  alert-dialog-header.svelte  alert-dialog-overlay.svelte  alert-dialog-title.svelte  index.ts
frontend/lib/components/ui/button/: button.svelte
frontend/lib/components/ui/card/: card.svelte
frontend/lib/components/ui/input/: input.svelte
frontend/lib/components/ui/label/: label.svelte
frontend/lib/components/ui/skeleton/: skeleton.svelte
(+3 files in other folders)
