[tool.poetry]
name = "bambui"
version = "0.1.0"
description = ""
authors = ["fidoriel <49869342+fidoriel@users.noreply.github.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bambu-connect = "^0.3.1"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
uvicorn = { version = "^0.34.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["bambu_connect.*"]
ignore_missing_imports = true
